# File and Version Information:
#  $Id: ChangeLog 8463 2014-06-24 01:53:04Z cpo@SLAC.STANFORD.EDU $
#
# Description:
#  ChangeLog file for package xtcav
#------------------------------------------------------------------------

Package author: Alvaro Sanchez-Gonzalez

Please describe any modifications that you made to the package in the
reverse time order.

-Added Test.py for running standard tests using python Tests.py on the main three classes. These tests are not exhaustive (they are not sophisticated unit tests of anything like that), as they do not test all possible combinations of paramentes, but at least they allow for a quick check. They require access to experiment 'amo86815'.
-Add method InterBunchPulseDelayBasedOnCurrentMultiple.
-Added docstring to IslandSplittingContour.
-Attribute islandSplitMethod renamed to islandsplitmethod to keep consistency.
-Changed names of the parameters for the island split method: par1 and par2 to islandsplitpar1, islandsplitpar2, so at least the name states that they refer to the island splitting process (even if they are used differently by different algorithms at some point).
-Added an option to methods which depends on the reconstruction algorithm (RMS or COM) to select which algorithm to use, instead of having different methods.

Tag: V00-00-13
2015-08-18 Christopher O'Grady
Fix bug in setting "ok" value in GetGlobalXTCAVCalibration.

Tag: V00-00-12
2015-08-18 Christopher O'Grady
Change the GetGlobalXTCAVCalibration method to try all possible
names for each variable, since the previous method of using the
"strstrength" variable to decide how to read all the variables
didn't work for cxii0314 run 101.

Tag: V00-00-11
2015-08-18 Mihir Mongia
Added parameters controllable by the user to the 'contourLabel' island splitting method

2015-08-11 Alvaro Sanchez-Gonzalez
-Modified how the islandSplitMethod is set for the shot to shot characterization, so the user can override the version set for the lasing off references.